# core

./: .clang-format  .gitignore  .gitmodules  .projections.json  CMakeLists.txt  Dockerfile  LICENSE  README.md
.circleci/: config.yml
cmake/: FindFilesystem.cmake  FindIlmBase.cmake  Findpng++.cmake  fetch_dependencies.cmake  mtao-config.cmake.in  mtao_dependency_versions.cmake  mtao_fetch_dependencies.cmake
examples/: CMakeLists.txt
examples/eigen_market_problem_solver/: CMakeLists.txt  main.cpp
examples/enright_test/: CMakeLists.txt
examples/enright_test/include/: enright.h
examples/enright_test/src/: main.cpp
examples/grid2d_viewer/: CMakeLists.txt  grid.cpp  grid.h  main.cpp
examples/grid_viewer/: CMakeLists.txt  grid.cpp  grid.h  main.cpp
examples/imgui_demo/: CMakeLists.txt  main.cpp
examples/imgui_newgl/: CMakeLists.txt  main.cpp
examples/imgui_oldgl/: CMakeLists.txt  main.cpp
examples/interpolation2d/: CMakeLists.txt  coeffs_test.cpp  curve.cpp  curve.hpp  main.cpp
examples/mesh2d_viewer/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h
examples/mesh_viewer/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h
examples/obj2ply/: CMakeLists.txt  main.cpp
examples/picking2d/: CMakeLists.txt  main.cpp
examples/planar_mesh/: CMakeLists.txt
examples/planar_mesh/include/: example_boundaries.h  geometry.h
examples/planar_mesh/src/: example_boundaries.cpp  geometry.cpp  main.cpp
examples/plane_viewer/: CMakeLists.txt  main.cpp
examples/poly_field_viewer2d/: CMakeLists.txt  main.cpp
examples/poly_field_viewer3d/: CMakeLists.txt  main.cpp
examples/rbf2d_viewer/: CMakeLists.txt  main.cpp
examples/sphere_obj_generator/: CMakeLists.txt  main.cpp
include/: cmdline_parser.hpp  coord.h  eigen_utils.h  grid.h  grid_utils.h  hotkey_manager.hpp  index_map.h  index_map_iterator.h  static_iteration.h  type_utils.h  types.h  util.h
include/KHR/: khrplatform.h
include/eigen/: axial_subspace.h
include/geometry/: bounding_box.hpp  circumcenter.h  volume.h
include/glad/: glad.h
include/grid/: grid.h  grid_storage.h  grid_utils.h  index_map.h
include/levelset/: animation.h  csg.h  deformer.h  discrete.h  levelset.h  levelset_example.h  ops.h  primitives.h  transformations.h  transformer.h
include/logging/: logger.hpp  timer.hpp
include/mtao/: cmdline_parser.hpp  colvector_loop.hpp  compat.h  conversion.h  copyable_unique_ptr.hpp  eigen_utils.h  enumerate.hpp  functional.hpp  hotkey_manager.hpp  overload.hpp  reindexer.hpp  static_iteration.h  type_utils.h  type_utils.hpp  types.h  types.hpp  util.h
include/opengl/: Window.h  bind.h  bo.h  camera.hpp  shader.h  shaders.h  tex.h  util.h  vao.h
src/: cmdline_parser.cpp  grid_test.cpp  hotkey_manager.cpp  levelset_test.cpp  multi_loop_test.cpp  static_iteration_test.cpp
src/algebra/: pascal_triangle.cpp
src/filesystem/: get_relative_path.cpp  prepend_to_filename.cpp
src/geometry/: strands.cpp
src/logging/: json_sink.cpp  logger.cpp  profiler.cpp  stopwatch.cpp  timer.cpp
src/opengl/: Monitor.cpp  Window.cpp  Window2.cpp  Window3.cpp  bo.cpp  camera.cpp  drawables.cpp  glad.c  imgui_impl.cpp  scene.cpp  shader.cpp  shaders.cpp  tex.cpp  util.cpp  vao.cpp
tests/: CMakeLists.txt  angle_test.cpp  area_normals_test.cpp  barycentric_matrix_test.cpp  barycentric_test.cpp  boundary_elements_test.cpp  boundary_test.cpp  bounding_box_test.cpp  cell_list_test.cpp  centroid_test.cpp  cltest.cpp  colvector_loop_test.cpp  combination_test.cpp  composite_test.cpp  conjugate_gradient_tests.cpp  copyable_unique_ptr_test.cpp  cot_laplacian_test.cpp  cube_shape_test.cpp  cycle_test.cpp  cyclic_order_test.cpp  diagonal_to_sparse_test.cpp  disjoint_set_test.cpp  dual_edge_lengths_test.cpp  dual_volume_test.cpp  earclipping_test.cpp  earclipping_with_input.cpp  edge_monomial_integrals_test.cpp  edges_to_plcurves_test.cpp  edges_to_polygons_test.cpp  eigen_interweave_test.cpp  eigen_stack_test.cpp  eigen_type_utils_test.cpp  element_filter_test.cpp  embedded_halfedge_test.cpp  enumerate_test.cpp  geometry_json_serialization.cpp  gram_schmidt_test.cpp  graph_boundary_test.cpp  grid_data_test.cpp  grid_test.cpp  (+67 more)
tests/run_tests/: CMakeLists.txt  cltest.cpp  colvector_loop_test.cpp  combination_test.cpp  cot_laplacian_test.cpp  disjoint_set_test.cpp  earclipping_with_input.cpp  geometry_json_serialization.cpp  graph_boundary_test.cpp  halfedge_concentric_circle_test.cpp  halfedge_submesh_test.cpp  hierarchical_stopwatch_test.cpp  iterator_interval_test.cpp  line_search_test.cpp  log_test.cpp  mat_to_triplets_test.cpp  mean_curvature_normals_test.cpp  partition_matrix_test.cpp  range_test.cpp  reverse_test.cpp  slice_filter_test.cpp  sphere_test.cpp  staggered_grid_util_test.cpp  static_iteration_test.cpp  strand_test.cpp  test_corrade_config_json_interchange.cpp  vertex_normals_test.cpp  vertex_pruning_test.cpp  winding_plus_earclipping_test.cpp
tmp/: composition.h  csg.h  discrete_scalar_function.h  levelset.h  levelset_example.h  levelset_transformer.h  particle_sampler.h  primitives.h  scalar_function.h  scalar_function_examples.cpp  transformations.h  transformer.h
tools/: CMakeLists.txt  add_boundary_to_obj.cpp  add_lines_to_obj.cpp  convert_mesh.cpp  corrade_configuration_to_json.cpp  json_to_corrade_configuration.cpp  mesh_info.cpp  mesh_to_vdb.cpp  partio_sequence_nearby_filter.cpp  partio_sequence_streamline_visualizer.cpp  partio_sequence_to_streamlines.cpp  partio_to_arrow_obj.cpp  partio_to_balls.cpp  partio_to_obj.cpp  partio_to_obj_filter.cpp  partio_to_ply.cpp  partio_to_vdb.cpp  partio_to_vdb_points.cpp  stopwatch_json2trace_event.cpp  transform_mesh.cpp  vdb_to_mesh.cpp  xyz_to_arrows.cpp  xyz_to_balls.cpp  xyz_to_partio.cpp
tools/partio_sequence_streamline_visualizer/: filter.cpp  filter.hpp  particles.cpp  particles.hpp  tube_mesh_constructor.cpp  tube_mesh_constructor_gui.cpp  tube_mesh_constructor_gui.hpp  viewer.cpp  viewer.hpp
tools/partio_sequence_tools/: filter.cpp  filter.hpp  particles.cpp  tube_mesh_constructor.hpp  tube_mesh_constructor_gui.cpp  viewer.cpp  viewer.hpp
(+341 files in other folders)
